# yaimp-rs

./: go.mod  main.go
client/: package.json
client/config/: webpack.config.js
client/public/: index.html
client/src/: App.js  index.css  index.js
client/src/components/: Footer.jsx  Header.jsx
client/src/views/: Editor.jsx  Fib.jsx  Home.jsx  Images.jsx  Intro.jsx
wasm/: Cargo.toml
wasm/src/: lib.rs
